--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +11,7 @@
     body {
       font-family: Arial, sans-serif;
       margin: 20px;
+      background-color: white;
     }
     label, input {
       display: block;
@@ -22,10 +24,11 @@
       font-weight: bold;
       margin-top: 20px;
     }
-    #gridDisplay {
+    #gridDisplay, #verticalGridDisplay {
       margin-top: 20px;
       display: inline-block;
       border: 1px solid #ccc;
+      margin-right: 40px;
     }
     .row {
       display: flex;
@@ -45,27 +48,33 @@
     .percolated {
       background-color: #0077ff;
     }
+    .vertical-divider {
+      border-right: 2px solid white;
+    }
   </style>
 </head>
 <body>
   <h1>Percolation Probability Simulator</h1>
 
-  <label>Number of columns (X):
-    <input type="number" id="columns" value="8" min="1" />
-  </label>
-  <label>Number of cells in each column (Y):
-    <input type="number" id="rows" value="8" min="1" />
-  </label>
-  <label>Probability of water passing each cell (P, 0-1):
-    <input type="number" id="probability" value="0.5" min="0" max="1" step="0.01" />
-  </label>
-  <label>Number of cycles (N):
-    <input type="number" id="cycles" value="10000" min="1" />
-  </label>
+  <div style="margin-bottom: 20px;">
+    <label>Number of columns (X):
+      <input type="number" id="columns" value="8" min="1" />
+    </label>
+    <label>Number of cells in each column (Y):
+      <input type="number" id="rows" value="8" min="1" />
+    </label>
+    <label>Probability of water passing each cell (P, 0-1):
+      <input type="number" id="probability" value="0.5" min="0" max="1" step="0.01" />
+    </label>
+    <label>Number of cycles (N):
+      <input type="number" id="cycles" value="10000" min="1" />
+    </label>
 
-  <button onclick="runSimulation()">Run Simulation</button>
+    <button onclick="runSimulation()">Run Simulation</button>
+  </div>
 
   <div id="gridDisplay"></div>
+  <div id="verticalGridDisplay"></div>
   <div id="result"></div>
   <div id="theoretical"></div>
 
@@ -123,7 +132,25 @@
         return null;
       }
 
-      // Run Monte Carlo simulation
+      function findVerticalPercolation(grid) {
+        const path = Array.from({ length: Y }, () => Array(X).fill(false));
+        for (let x = 0; x < X; x++) {
+          let columnOpen = true;
+          for (let y = 0; y < Y; y++) {
+            if (!grid[y][x]) {
+              columnOpen = false;
+              break;
+            }
+          }
+          if (columnOpen) {
+            for (let y = 0; y < Y; y++) {
+              path[y][x] = true;
+            }
+          }
+        }
+        return path;
+      }
+
       for (let i = 0; i < N; i++) {
         const grid = createGrid();
         if (findPercolationPath(grid)) success++;
@@ -140,11 +167,14 @@
       document.getElementById("theoretical").innerText =
         `Theoretical (no interconnection): ${atLeastOne.toFixed(4)}`;
 
-      // Show single random grid and visualize percolation
       const oneGrid = createGrid();
       const path = findPercolationPath(oneGrid);
+      const verticalPath = findVerticalPercolation(oneGrid);
+
       const gridDisplay = document.getElementById("gridDisplay");
+      const verticalGridDisplay = document.getElementById("verticalGridDisplay");
       gridDisplay.innerHTML = "";
+      verticalGridDisplay.innerHTML = "";
 
       for (let y = 0; y < Y; y++) {
         const rowDiv = document.createElement("div");
@@ -162,8 +192,30 @@
         }
         gridDisplay.appendChild(rowDiv);
       }
+
+      for (let y = 0; y < Y; y++) {
+        const rowDiv = document.createElement("div");
+        rowDiv.className = "row";
+        for (let x = 0; x < X; x++) {
+          const cellDiv = document.createElement("div");
+
+          if (!oneGrid[y][x]) {
+            cellDiv.className = "cell blocked";
+          } else if (verticalPath[y][x]) {
+            cellDiv.className = "cell percolated";
+          } else {
+            cellDiv.className = "cell open";
+          }
+
+          if (x < X - 1) {
+            cellDiv.classList.add("vertical-divider");
+          }
+
+          rowDiv.appendChild(cellDiv);
+        }
+        verticalGridDisplay.appendChild(rowDiv);
+      }
     }
   </script>
 </body>
 </html>
-
